# knowledge-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  wiki-rebuild.yml
docs/: architecture.md  getting-started.md  how-to-verify.md  reading-order.md
docs/ai-engineering/: chat-engine-deep-dive.md  evaluation-framework-deep-dive.md  feedback-loop-deep-dive.md  gap-detector-deep-dive.md  graph-extractor-deep-dive.md  graphrag-concepts.md  graphstore-interface-deep-dive.md  graphstore-providers-deep-dive.md  ingestion-pipeline-deep-dive.md  llm-interface-deep-dive.md  llm-providers-deep-dive.md  testing.md  vectorstore-interface-deep-dive.md  vectorstore-providers-deep-dive.md  wiki-generator-deep-dive.md
docs/architecture-and-design/: api-routes-explained.md
docs/architecture-and-design/api-routes/: eval-endpoint-explained.md  feedback-endpoint-explained.md  health-endpoint-explained.md  ingest-endpoint-explained.md  wiki-endpoint-explained.md
docs/hands-on-labs/: hands-on-labs-config-tuning.md  hands-on-labs-phase-1.md  hands-on-labs-phase-2.md  hands-on-labs-phase-3.md  how-to-read-the-labs.md
docs/setup-and-tooling/: getting-started.md
infra/aws/: main.tf
infra/azure/: main.tf
scripts/: golden-questions.yaml  run_all_labs.py
scripts/lab-results/local/: eval-summary.json  lab-results-report.md  run-results.json
src/: config.py  main.py  models.py
src/chat/: candidate_store.py  engine.py  feedback.py  gap_detector.py
src/evaluation/: evaluator.py
src/graphstore/: base.py  cosmos_graph.py  dynamodb_graph.py  factory.py  neo4j_store.py
src/ingestion/: graph_extractor.py  scanner.py
src/llm/: azure_openai.py  base.py  bedrock.py  factory.py  ollama.py
src/routes/: chat.py  eval.py  feedback.py  health.py  ingest.py  wiki.py
src/vectorstore/: azure_search.py  base.py  chroma.py  dynamodb.py  factory.py
src/wiki/: generator.py
tests/: conftest.py  test_chat_engine.py  test_evaluation.py  test_ingestion.py  test_llm_prompt.py
ui/: app.py
